Fixed: small-screen nav-text overlap next section

--- a/css/flex.css
+++ b/css/flex.css
@@ -20,6 +20,11 @@
     flex-direction: row;
 }
 
+.flex-row-non-shrink{
+    flex-direction: row !important;
+    width: 140%;
+}
+
 .flex-row-reverse {
     flex-direction: row-reverse;
 }
